--------------------------------------------------------------------------
---------                Ampache -- CHANGELOG                    ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.4-Alpha4 
	- Fixed problem with invalid urls populated to localplay methods
		under certin conditions
	- Fixed Album Art dump bin script 
	- Added paging to the Playlist Song view
	- Fixed error on catalog Update All 
	- Fixed Public registration page, and simplified logic
	- Added 'Add' button to recently played
	- Limited Rightbar to only 100 items, adds last row indicating any
		additional items on playlist. Prevents Firefox crash if you
		add many thousands of items to a single active playlist
	- Corrected Sorting of Democratic Play votes, sort order is now 
		# of votes then oldest vote first so new votes sort to
		the bottom
	- Fixed sending URLs directly to MPD
	- Fixed a problem with automatic downsampling which was referencing
		a now non-existant function 
	- Massive speed improvement on display and sorting of standard
		browse functions
	- Put Ratings back into single song view 
	- Corrected potential consistancy issue with Play Type dropdown
	- Made Access Denied page more friendly, added verbage for
		demo access

--------------------------------------------------------------------------
  v.3.4-Alpha3 11/25/2007 
	- Fixed display problem and lack of link when creating a catalog
	- Inital Version of Democratic play working, minor speed improvements
		to normal tmpplaylist class due to simplification and removal
		of democratic related code
	- Added ability to do batch downloads on the FS failed downloads
		currently will not be garbage collected (Thx COF)
	- Added default mime type if none found (image/jpg) 
	- Changed XML-RPC ACL type to RPC to reflect multiple uses
	- Tweaked catalog add function to improve speed (Thx Karl Hungus)